manifest/svc-blue-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-web
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: blue-web
